--- a/menu2.html
+++ b/menu2.html
@@ -83,10 +83,9 @@
         </section> 
         <div class="cc"><p>Bon Appétit</p></div>
     </section>
-
-   
-
-   <p><a href="../menu1/menu4.html">Contactez-nous pour les réservations </p></a>
+    <div class="mm">
+        <a href="../menu1/menu4.html"> <button type="button" >Contactez-nous </button></a>
+    </div>
 </body>
 
 </html>
